# eve_service

./: .gitignore  app.py  pyproject.toml  requirements.txt
etc/systemd/system/: eve_service.service
eve_service/: .gitignore  app.py  gunicorn_config.py  pyproject.toml  requirements.txt
eve_service/flask_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
eve_service/scripts/: database_init.py  download_echarts.py  get_blood_lp.py  get_buy_sell.py  get_price_history.py  models.py  naocha.csv  search_items.py
eve_service/static/css/: style.css
eve_service/static/js/: chart.js  main.js
eve_service/templates/: index.html  price_history.html  xuexi_ranshao.html
eve_service/tests/: test.py
flask_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: get_icon.py  search_items.py
static/css/: style.css
static/js/: api.js  chart.js  main.js
templates/: index.html  price_history.html
tests/: test_api.ipynb  test_app.py
