[project]
name = "flask-app"
version = "0.1.0"
description = "A simple Flask application."

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "certifi>=2024.2.2",
    "tqdm>=4.66.0",
    "werkzeug>=3.0.0",
    "flask-session>=0.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]
[tool.setuptools]
packages = ["scripts"]